fixing the swagger issue
