# docs/swagger.json
@@ -85,6 +85,27 @@
                 }
             }
         },
+        "/health": {
+            "get": {
+                "description": "Get the health of the application",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Get Health",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/operations": {
             "post": {
                 "description": "Create different operation types for the given input",
