# internal/app/pismo/controller/health_controller.go
@@ -17,6 +17,13 @@ func NewHealthController() IHealthController {
 	return &HealthController{}
 }
 
+// HealthStatus 	    godoc
+// @Summary 			Get Health
+// @Description 		Get the health of the application
+// @Produce 			application/json
+// @Tags 				Health
+// @Success 			200 {object} map[string]interface{}
+// @Router 				/health [get]
 func (h *HealthController) HealthStatus(ctx *gin.Context) {
 	resp := map[string]string{
 		"status": "working",
